--- a/web/views/vaga/card.html
+++ b/web/views/vaga/card.html
@@ -7,7 +7,7 @@
       </div>
       <div class="h-10 w-10">
         <img
-          src="/assets/images/emblema-branco.png"
+          src="{logo}"
           width="40"
           height="40"
           class="object-cover w-full h-full rounded-full"
