--- a/web/views/vaga/painel_n.phtml
+++ b/web/views/vaga/painel_n.phtml
@@ -17,7 +17,7 @@ foreach ($filtro_empresas as $id_empresa) {
     }
 }
 
-$estados = FilialEstadoEnum::forSelect();
+$estados = EstadoEnum::forSelect();
 foreach ($filtro_estados as $sigla_estado) {
     $filtros_badges[] = $estados[$sigla_estado];
 }
@@ -43,7 +43,7 @@ foreach ($filtro_trabalho as $indice) {
 }
 
 $hasMinSalario = !empty($filtro_salarioDe) && $filtro_salarioDe != 0;
-$hasMaxSalario = !empty($filtro_salarioAte) && $filtro_salarioAte != 50000;
+$hasMaxSalario = !empty($filtro_salarioAte) && $filtro_salarioAte != 1000000;
 
 if ($hasMinSalario) {
     $filtros_badges[] = 'A partir de R$' . $filtro_salarioDe;
@@ -113,6 +113,7 @@ if ($hasMaxSalario) {
             <?php endif; ?>
             <div class="grid xl:grid-cols-2 gap-x-4 gap-y-8 w-full">
                 <?php
+                /** @var array<Vaga> $vagas */
                 foreach ($vagas as $vaga) :
                     echo $vaga->renderCardJob();
                 endforeach; ?>
