--- a/web/views/vaga/filtros.phtml
+++ b/web/views/vaga/filtros.phtml
@@ -111,7 +111,7 @@
                     <div class="label">
                         <span class="label-text">Ate:</span>
                     </div>
-                    <input class="range range-sm range-primary" type="range" id="salarioAte" name="salarioAte" min="0" max="1000000" value="<?= $filtro_salarioAte ?? '50000' ?>" step="1000" oninput="outputAte.value = salarioAte.value; ">
+                    <input class="range range-sm range-primary" type="range" id="salarioAte" name="salarioAte" min="0" max="1000000" value="<?= $filtro_salarioAte ?? '1000000' ?>" step="1000" oninput="outputAte.value = salarioAte.value; ">
                     <div class="label justify-end">
                         <span class="label-alt">R$ </span>
                         <output id="outputAte"><?= $filtro_salarioAte ?? '1000000' ?></output>
@@ -123,8 +123,11 @@
     </div>
     <div class="flex gap-4 w-full justify-end">
         <a href="/#vagas" class="btn btn-ghost">Limpar Filtros</a>
-        <button type="submit" class="btn btn-accent"><svg class="w-5 h-5" data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <button type="submit" class="btn btn-accent">
+            <svg class="w-5 h-5" data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path clip-rule="evenodd" d="M3.792 2.938A49.069 49.069 0 0 1 12 2.25c2.797 0 5.54.236 8.209.688a1.857 1.857 0 0 1 1.541 1.836v1.044a3 3 0 0 1-.879 2.121l-6.182 6.182a1.5 1.5 0 0 0-.439 1.061v2.927a3 3 0 0 1-1.658 2.684l-1.757.878A.75.75 0 0 1 9.75 21v-5.818a1.5 1.5 0 0 0-.44-1.06L3.13 7.938a3 3 0 0 1-.879-2.121V4.774c0-.897.64-1.683 1.542-1.836Z" fill-rule="evenodd"></path>
-            </svg>Filtrar</button>
+            </svg>
+            Filtrar
+        </button>
     </div>
 </form>
